# md_editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
app/model/: DocumentModel.cpp  DocumentModel.h  FileManager.cpp  FileManager.h  MarkdownParser.cpp  MarkdownParser.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  tool.h
app/presenter/: EditorPresenter.cpp  EditorPresenter.h
app/view/: BaseView.cpp  BaseView.h  CodePlainEditor.cpp  CodePlainEditor.h  CoreView.cpp  CoreView.h  EditorView.cpp  EditorView.h  PreviewView.cpp  PreviewView.h  WelcomeView.cpp  WelcomeView.h
test/cmark-gfm_test/: CMakeLists.txt  main.cpp
test/webview2_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
